...
    </array>


    <string name="day_or_night">Day or Night</string>
    <string name="day_or_night_summary">There is a light and a dark theme</string>
    <string name="dialog_title_success">Success</string>
    <string name="dialog_title_error">Error</string>

    <string name="select_fiat_reference">Select (Fiat) Reference</string>
    <string name="preferences_no_screenshots_title">Prevent ScreenShots</string>
    <string name="preferences_advanced_functions_title">Advanced Functions</string>
    <string name="select_token">Select Token</string>
    <string name="create_account_subtitle">Create Account</string>
    <string name="open_in_blockexplorer">Open in BlockExplorer</string>
    <string name="transaction_to_label">Receiver:</string>
    <string name="transaction_from_label">Sender:</string>
    <string name="alert_problem_title">Problem</string>
    <string name="address_not_valid">The address is not valid</string>
    <string name="input_hint_address">Address</string>
    <string name="input_hint_notes">Notes</string>
    <string name="input_hint_account_name">Name</string>
    <string name="input_hint_account_address">Address or ENS name</string>
    <string name="please_enter_name">Please enter a name</string>
    <string name="info">Info</string>
    <string name="rpc">RPC</string>
    <string name="sourcify">Sourcify</string>
    <string name="tincubeth">Tincubeth</string>
    <string name="dappnode">DappNode</string>
    <string name="copy">Copy</string>
...
    <string name="warning_invalid_param_type">Invalid parameter type detected (%1$s = %2$s)</string>
    <string name="info_activity_subtitle">Version %s</string>
    <string name="warning_subtitle">Warning</string>
    <string name="please_enter_your_pin">Please enter your PIN</string>
    <string name="please_confirm_your_pin">Please confirm your PIN</string>
    <string name="warning_not_a_valid_address">not a valid address: %s</string>
    <string name="title_invalid_address_alert">Invalid address or ENS name</string>
    <string name="please_connect_your_trezor">Please connect your TREZOR</string>
    <string name="create_transaction_sender_label">Sender:</string>
    <string name="create_transaction_function_label">Function:</string>
    <string name="unknown_token">Unknown Token</string>
    <string name="add_token_manually">Please add token with address %1$s manually.</string>
    <string name="no_token_address">Token address is missing!</string>
...
    <string name="security_info_pached_bad">Your Android system was patched %d days ago - which is considered good.</string>
    <string name="security_info_patched_reasonably">Your Android got the last security updates %d days ago - which is reasonable - but could be better. Nag your phone provider to provide you with patches or install a custom ROM with recent security updates. You might also consider a hardware wallet like a TREZOR to mitigate the problem.</string>
    <string name="security_info_patched_badly">Your Android system was patched %d days ago - which is considered bad as it is old and the chance is high that there are security flaws and your funds are at risk. Nag your phone provider to provide you with patches or install a custom ROM with recent security patches. You might also consider a hardware wallet like a TREZOR to mitigate the problem</st
    <string name="offline_transaction">Offline Transaction</string>
    <string name="debug">Debug</string>
    <string name="security_privacy_label">Security/Privacy</string>
    <string name="key_length_error">Key length error</string>
    <string name="import_as_subtitle">Import as</string>
    <string name="burner_label">burner</string>
    <string name="create_transaction_action_label">Action:</string>
    <string name="create_transaction_warning_label">Warning:</string>
    <string name="create_transaction_warnings_label">Warnings:</string>
    <string name="mail">Mail</string>
    <string name="add_action">Add Action</string>
...
