<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.textfield.TextInputLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_main"
        android:hint="@string/input_hint_reference_to_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/rythm2">


    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/reference_text"
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</com.google.android.material.textfield.TextInputLayout>
